finished a few improvements, and adaptations required, now admins users can upload new icons, also will be capable do remove deleted quotes on a future version.

--- a/app/src/main/res/layout-v26/newquotepopup.xml
+++ b/app/src/main/res/layout-v26/newquotepopup.xml
@@ -131,6 +131,8 @@
                     android:padding="16dp"
                     android:singleLine="false"
                     android:textStyle="bold"
+                    android:importantForAutofill="no"
+                    android:inputType="text"
                     android:typeface="normal" />
 
                 <EditText
