--- a/app/src/main/res/layout/newquotepopup.xml
+++ b/app/src/main/res/layout/newquotepopup.xml
@@ -51,6 +51,13 @@
                         android:layout_height="wrap_content"
                         android:orientation="vertical">
 
+                        <com.google.android.material.progressindicator.ProgressIndicator
+                            android:id="@+id/editloading"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:indeterminate="true"
+                            android:indeterminateTint="@color/colorAccent" />
+
                         <RelativeLayout
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
