--- a/app/src/main/res/layout/about_title_layout.xml
+++ b/app/src/main/res/layout/about_title_layout.xml
@@ -4,8 +4,8 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="?android:colorBackground"
-    app:layout_scrollFlags="scroll|enterAlways"
-    app:elevation="0dp">
+    app:elevation="0dp"
+    app:layout_scrollFlags="scroll|enterAlways">
 
     <com.google.android.material.appbar.CollapsingToolbarLayout
         android:layout_width="match_parent"
@@ -13,7 +13,7 @@
         app:title=""
         app:titleEnabled="false">
 
-        <TextView
+        <com.veeyaar.supergradienttextview.GradientTextView
             android:id="@+id/collapseTitle"
             style="@style/ToolbarTitle"
             android:layout_width="match_parent"
@@ -21,15 +21,17 @@
             android:layout_alignParentBottom="true"
             android:layout_marginTop="?android:actionBarSize"
             android:animateLayoutChanges="true"
-            android:text="@string/app_name" />
+            android:text="@string/app_name"
+            app:endColor="@color/colorAccent"
+            app:startColor="@color/colorPrimary" />
 
         <androidx.appcompat.widget.Toolbar
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
             android:animateLayoutChanges="true"
-            app:layout_collapseMode="parallax"
-            android:elevation="0dp" />
+            android:elevation="0dp"
+            app:layout_collapseMode="parallax" />
     </com.google.android.material.appbar.CollapsingToolbarLayout>
 
 </com.google.android.material.appbar.AppBarLayout>
