--- a/app/src/main/res/layout/activity_about.xml
+++ b/app/src/main/res/layout/activity_about.xml
@@ -10,7 +10,7 @@
         android:layout_height="match_parent"
         tools:context=".view.activities.AboutActivity">
 
-        <include layout="@layout/title_layout" />
+        <include layout="@layout/about_title_layout" />
 
         <RelativeLayout
             android:layout_width="match_parent"
@@ -47,12 +47,14 @@
                     android:textColor="@color/colorAccent" />
 
 
-                <TextView
+                <com.veeyaar.supergradienttextview.GradientTextView
                     android:id="@+id/mainInfo"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:padding="10dp"
                     android:text="@string/developed_by"
+                    app:endColor="@color/material_teal800"
+                    app:startColor="@color/material_blue900"
                     android:textAlignment="center" />
 
             </LinearLayout>
