--- a/app/src/main/res/layout/activity_edit_quote.xml
+++ b/app/src/main/res/layout/activity_edit_quote.xml
@@ -4,6 +4,8 @@
 
 
     <LinearLayout
+        android:id="@+id/mainContainer"
+        android:padding="@dimen/default_padding"
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
