--- a/app/src/main/res/layout/change_name_view.xml
+++ b/app/src/main/res/layout/change_name_view.xml
@@ -1,18 +1,39 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:showIn="@layout/activity_settings">
 
 
     <RelativeLayout
-        android:background="@color/oblack"
+        android:id="@+id/changen_main_view"
+        android:layout_marginBottom="4dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="4dp"
-        android:layout_marginBottom="4dp"
         android:padding="@dimen/default_padding">
 
+        <androidx.cardview.widget.CardView
+            android:id="@+id/editIcon"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:layout_alignParentStart="true"
+            android:layout_centerInParent="true"
+            app:cardBackgroundColor="@color/colorPrimary"
+            app:cardCornerRadius="5dp">
+
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:padding="8dp"
+                android:src="@drawable/ic_pen"
+                app:tint="@color/white" />
+        </androidx.cardview.widget.CardView>
+
         <com.google.android.material.textfield.MaterialAutoCompleteTextView
+            android:layout_marginStart="4dp"
+            android:layout_toEndOf="@id/editIcon"
+            android:padding="@dimen/default_padding"
             android:id="@+id/changename"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -20,15 +41,17 @@
             android:layout_toStartOf="@id/changeStatus"
             android:background="@color/transparent"
             android:hint="Alterar nome"
+            android:textAllCaps="false"
             android:importantForAutofill="no"
             android:inputType="textPersonName"
             android:maxLength="50"
-            android:textAllCaps="false"
-            android:textStyle="bold" />
+            android:textSize="@dimen/min_quote_size" />
 
         <LinearLayout
+            android:layout_centerInParent="true"
             android:id="@+id/changeStatus"
             android:layout_width="wrap_content"
+            android:visibility="gone"
             android:layout_height="match_parent"
             android:layout_alignParentEnd="true"
             android:gravity="center"
@@ -36,20 +59,25 @@
 
             <com.google.android.material.button.MaterialButton
                 android:id="@+id/saveName"
-                style="@style/Widget.MaterialComponents.Button.TextButton"
+                style="@style/Widget.MaterialComponents.Button.TextButton.Dialog.Flush"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Salvar" />
 
-            <ProgressBar
-                android:id="@+id/nameProgress"
-                android:layout_width="32dp"
-                android:layout_height="match_parent"
-                android:layout_alignParentEnd="true"
-                android:layout_centerInParent="true"
-                android:indeterminate="true"
+            <com.google.android.material.progressindicator.ProgressIndicator
+                android:id="@+id/loading"
+                style="@style/App_progress_Indicator"
+                android:layout_gravity="bottom|end"
                 android:visibility="gone" />
         </LinearLayout>
+
+        <TextView
+            android:id="@+id/saveStatus"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:text="Salvo com sucesso"
+            android:textColor="@color/white"
+            android:visibility="gone" />
 
 
     </RelativeLayout>
