--- a/app/src/main/res/layout/delete_all_alert.xml
+++ b/app/src/main/res/layout/delete_all_alert.xml
@@ -11,6 +11,8 @@
         android:padding="@dimen/default_padding">
 
         <ImageButton
+            android:id="@+id/close_button"
+            android:contentDescription="Fechar"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="start|top"
@@ -19,6 +21,7 @@
             android:tint="?android:textColorPrimary" />
 
         <ImageView
+            android:importantForAccessibility="no"
             android:layout_width="match_parent"
             android:layout_height="300dp"
             android:src="@drawable/mirage_delete" />
