--- a/app/src/main/res/layout/empty_layout.xml
+++ b/app/src/main/res/layout/empty_layout.xml
@@ -13,6 +13,7 @@
         tools:showIn="@layout/quote_recycler">
 
         <ImageView
+            android:id="@+id/emptyImage"
             android:layout_width="100dp"
             android:layout_height="100dp"
             android:importantForAccessibility="no"
