--- a/app/src/main/res/layout/quote_header_view.xml
+++ b/app/src/main/res/layout/quote_header_view.xml
@@ -9,14 +9,14 @@
 
         <TextView
             android:id="@+id/title"
-            style="@style/ToolbarTitle"
-            android:layout_marginStart="4dp"
+            style="@style/TextAppearance.MaterialComponents.Headline6"
+            android:padding="@dimen/default_radius"
+            android:textStyle="bold"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             tools:text="Publicações" />
 
         <include
-
             android:id="@+id/quotesRecycler"
             layout="@layout/quote_recycler" />
 
