--- a/app/src/main/res/layout/quote_recycler.xml
+++ b/app/src/main/res/layout/quote_recycler.xml
@@ -1,30 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
 
     <RelativeLayout
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:layout_width="match_parent"
         android:layout_marginTop="10dp">
 
         <androidx.recyclerview.widget.RecyclerView
-            tools:visibility="visible"
+            tools:visibility="gone"
             android:visibility="gone"
             tools:listitem="@layout/quotescard"
             android:id="@+id/quotesrecyclerview"
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
 
-        <com.budiyev.android.circularprogressbar.CircularProgressBar
-            app:foregroundStrokeColor="@color/colorPrimaryDark"
-            app:indeterminate="true"
+        <com.google.android.material.progressindicator.ProgressIndicator
+            style="@style/App_progress_Indicator"
             android:id="@+id/loading"
             android:layout_centerInParent="true"
-            android:visibility="gone"
-            android:layout_width="64dp"
-            android:layout_height="64dp" />
+            tools:visibility="visible"
+            android:visibility="gone" />
 
         <include
             android:id="@+id/not_found_include"
