--- a/app/src/main/res/layout/user_picview.xml
+++ b/app/src/main/res/layout/user_picview.xml
@@ -12,7 +12,7 @@
         android:layout_width="32dp"
         android:layout_height="32dp"
         android:src="@drawable/ic_saturn_and_other_planets_primary"
-        app:civ_circle_background_color="?android:textColorHint" />
+        app:civ_circle_background_color="@color/colorPrimaryDark" />
 
 
 </layout>
