--- a/app/src/main/res/layout/user_quote_card_view.xml
+++ b/app/src/main/res/layout/user_quote_card_view.xml
@@ -31,6 +31,7 @@
             <de.hdodenhof.circleimageview.CircleImageView
                 android:layout_height="match_parent"
                 android:stateListAnimator="@animator/list_animator"
+                app:civ_circle_background_color="@color/colorPrimaryDark"
                 android:id="@+id/userpic"
                 android:layout_width="50dp"
                 android:transitionName="profilepic"
