--- a/app/src/main/res/layout-v26/quotes_card.xml
+++ b/app/src/main/res/layout-v26/quotes_card.xml
@@ -1,32 +1,37 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
 
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:tools="http://schemas.android.com/tools">
 
 
     <com.google.android.material.card.MaterialCardView
         android:id="@+id/quoteCard"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="350dp"
         android:layout_marginVertical="10dp"
         android:animateLayoutChanges="true"
         android:elevation="@dimen/cardview_default_elevation"
         android:foreground="?attr/selectableItemBackground"
+        android:hapticFeedbackEnabled="true"
         android:orientation="vertical"
         android:stateListAnimator="@animator/list_animator"
         app:cardBackgroundColor="?android:textColorHint"
         app:cardCornerRadius="15dp"
         app:cardElevation="0dp">
 
-        <LinearLayout
+        <RelativeLayout
+            android:id="@+id/quoteMainView"
+            android:animateLayoutChanges="true"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:orientation="vertical">
 
             <RelativeLayout
+                android:id="@+id/quoteInfo"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_alignParentTop="true"
                 android:background="@drawable/fade_gradient"
                 android:orientation="vertical"
                 android:padding="8dp">
@@ -45,7 +50,7 @@
                     android:id="@+id/userTop"
                     layout="@layout/user_quote_card_view"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="?attr/actionBarSize"
                     android:layout_centerInParent="true"
                     android:layout_toStartOf="@id/quoteDate" />
 
@@ -56,9 +61,14 @@
             <TextView
                 android:id="@+id/quoteTextView"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_above="@id/author_text_view"
+                android:layout_below="@id/quoteInfo"
+                android:autoSizeMaxTextSize="@dimen/big_quote_size"
+                android:autoSizeMinTextSize="@dimen/min_quote_size"
+                android:autoSizeTextType="uniform"
                 android:padding="8dp"
-                android:textSize="@dimen/default_quote_size"
+                android:textSize="@dimen/big_quote_size"
                 android:textStyle="bold"
                 android:typeface="normal"
                 tools:text="Everything I do \nI tell you all the time"
@@ -68,6 +78,7 @@
                 android:id="@+id/author_text_view"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_above="@id/quoteButtons"
                 android:backgroundTint="@color/transparent"
                 android:padding="8dp"
                 android:textSize="24sp"
@@ -77,8 +88,10 @@
 
 
             <RelativeLayout
+                android:id="@+id/quoteButtons"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_alignParentBottom="true"
                 android:background="@drawable/fade_gradient_inversed"
                 android:padding="8dp">
 
@@ -107,12 +120,15 @@
             </RelativeLayout>
 
 
-        </LinearLayout>
+        </RelativeLayout>
 
-        <com.google.android.material.progressindicator.ProgressIndicator
-            android:layout_gravity="bottom|end"
-            android:id="@+id/loading"
-            style="@style/App_progress_Indicator" />
+        <include
+            android:id="@+id/cardShimmer"
+            layout="@layout/quote_place_holder"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
+
+
     </com.google.android.material.card.MaterialCardView>
 
 
