--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -17,8 +17,9 @@
         android:layout_centerInParent="true"
         android:text="@string/app_name"
         android:textStyle="bold"
-        app:endColor="@color/colorPrimaryDark"
-        app:startColor="@color/colorPrimary" />
+        app:endColor="@color/material_purple800"
+        app:isVertical="true"
+        app:startColor="@color/material_purple900" />
 
 
     <com.veeyaar.supergradienttextview.GradientTextView
