--- a/app/src/main/res/layout/developer_layout.xml
+++ b/app/src/main/res/layout/developer_layout.xml
@@ -3,16 +3,24 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
 
-    <de.hdodenhof.circleimageview.CircleImageView
-        android:id="@+id/pic"
+    <com.facebook.shimmer.ShimmerFrameLayout
+        android:id="@+id/developerShimmer"
         android:layout_width="150dp"
         android:layout_height="150dp"
-        android:layout_margin="10dp"
-        android:contentDescription="@string/icon_info"
-        android:hapticFeedbackEnabled="true"
-        android:src="@drawable/me"
-        app:civ_border_overlay="true"
-        app:civ_circle_background_color="@color/colorAccent" />
+        android:padding="4dp">
+
+        <de.hdodenhof.circleimageview.CircleImageView
+            android:id="@+id/pic"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_margin="10dp"
+            android:contentDescription="@string/icon_info"
+            android:hapticFeedbackEnabled="true"
+            android:src="@drawable/me"
+            app:civ_border_overlay="true"
+            app:civ_circle_background_color="@color/colorAccent" />
+    </com.facebook.shimmer.ShimmerFrameLayout>
+
 
 </layout>
 
