--- a/app/src/main/res/layout/newquotepopup.xml
+++ b/app/src/main/res/layout/newquotepopup.xml
@@ -9,179 +9,184 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="match_parent">
 
         <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/colorlibrary"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
             android:layout_alignParentTop="true"
             android:orientation="horizontal"
             app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
-            android:layout_height="wrap_content"
-            android:id="@+id/colorlibrary"
-            android:layout_width="match_parent"
             app:spanCount="3"
             tools:listitem="@layout/color_card" />
 
-        <ScrollView
-            android:layout_height="wrap_content"
-            android:layout_below="@id/colorlibrary"
-            android:layout_marginHorizontal="10dp"
-            android:layout_marginVertical="10dp"
-            android:layout_width="match_parent"
-            android:animateLayoutChanges="true">
 
-            <LinearLayout
-                android:layout_height="wrap_content"
+        <com.google.android.material.card.MaterialCardView
+            android:layout_below="@id/colorlibrary"
+            android:id="@+id/background"
+            android:layout_width="match_parent"
+            android:layout_height="350dp"
+            android:layout_marginVertical="10dp"
+            android:animateLayoutChanges="true"
+            android:elevation="@dimen/cardview_default_elevation"
+            android:foreground="?attr/selectableItemBackground"
+            android:hapticFeedbackEnabled="true"
+            android:orientation="vertical"
+            android:stateListAnimator="@animator/list_animator"
+            app:cardBackgroundColor="?android:textColorHint"
+            app:cardCornerRadius="15dp"
+            app:cardElevation="0dp">
+
+            <RelativeLayout
                 android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:animateLayoutChanges="true"
                 android:orientation="vertical">
 
-                <com.google.android.material.card.MaterialCardView
-                    android:id="@+id/background"
-                    android:animateLayoutChanges="true"
+                <RelativeLayout
+                    android:id="@+id/quoteInfo"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:orientation="vertical"
-                    android:stateListAnimator="@animator/list_animator"
-                    app:cardCornerRadius="@dimen/default_radius"
-                    app:cardElevation="@dimen/cardview_default_elevation"
-                    tools:backgroundTint="@color/colorPrimaryDark">
+                    android:layout_alignParentTop="true"
+                    android:background="@drawable/fade_gradient"
+                    android:orientation="horizontal"
+                    android:padding="8dp">
+
+                    <include
+                        android:id="@+id/userTop"
+                        layout="@layout/user_quote_card_view"
+                        android:layout_width="match_parent"
+                        android:layout_height="?attr/actionBarSize"
+                        android:layout_centerInParent="true"
+                        android:layout_toStartOf="@id/quoteEditButtons" />
 
                     <LinearLayout
-                        android:animateLayoutChanges="true"
-                        android:layout_width="match_parent"
+                        android:id="@+id/quoteEditButtons"
+                        android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:orientation="vertical">
+                        android:layout_alignParentEnd="true"
+                        android:layout_centerInParent="true"
+                        android:layout_gravity="center"
+                        android:layout_marginHorizontal="4dp"
+                        android:gravity="center"
+                        android:orientation="horizontal">
 
-                        <com.google.android.material.progressindicator.ProgressIndicator
-                            android:id="@+id/editloading"
-                            android:layout_width="match_parent"
+                        <ImageButton
+                            android:id="@+id/textcolorfab"
+                            android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:indeterminate="true"
-                            android:indeterminateTint="@color/colorAccent" />
+                            android:layout_gravity="center"
+                            android:background="@drawable/round"
+                            android:backgroundTint="@color/lwhite"
+                            android:contentDescription="Alterar cor do texto"
+                            android:padding="10dp"
+                            android:src="@drawable/ic_format_color_text_black_24dp" />
 
-                        <RelativeLayout
-                            android:layout_width="match_parent"
+                        <TextView
+                            android:id="@+id/fontSelector"
+                            android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:orientation="horizontal"
+                            android:layout_marginStart="5dp"
+                            android:layout_marginEnd="5dp"
+                            android:background="@drawable/round"
+                            android:backgroundTint="@color/lwhite"
+                            android:contentDescription="Alterar fonte"
                             android:padding="8dp"
-                            android:background="@drawable/fade_gradient">
+                            android:paddingStart="16dp"
+                            android:paddingEnd="16dp"
+                            android:text="F"
+                            android:textSize="24sp" />
 
-                            <include
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:layout_alignParentStart="true"
-                                android:id="@+id/userTop"
-                                layout="@layout/user_quote_card_view"
-                                android:layout_centerInParent="true"
-                                android:layout_toStartOf="@id/quotEditButtons" />
-
-                            <LinearLayout
-                                android:id="@+id/quotEditButtons"
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:layout_alignParentEnd="true"
-                                android:layout_centerInParent="true"
-                                android:layout_gravity="center"
-                                android:layout_marginHorizontal="4dp"
-                                android:gravity="center"
-                                android:orientation="horizontal">
-
-                                <ImageButton
-                                    android:id="@+id/textcolorfab"
-                                    android:layout_width="wrap_content"
-                                    android:layout_height="wrap_content"
-                                    android:layout_gravity="center"
-                                    android:background="@drawable/round"
-                                    android:backgroundTint="@color/lwhite"
-                                    android:contentDescription="Alterar cor do texto"
-                                    android:padding="10dp"
-                                    android:src="@drawable/ic_format_color_text_black_24dp" />
-
-                                <TextView
-                                    android:id="@+id/fontSelector"
-                                    android:layout_width="wrap_content"
-                                    android:layout_height="wrap_content"
-                                    android:layout_marginStart="5dp"
-                                    android:layout_marginEnd="5dp"
-                                    android:background="@drawable/round"
-                                    android:backgroundTint="@color/lwhite"
-                                    android:contentDescription="Alterar fonte"
-                                    android:padding="8dp"
-                                    android:paddingStart="16dp"
-                                    android:paddingEnd="16dp"
-                                    android:text="F"
-                                    android:textSize="24sp" />
-
-                                <ImageButton
-                                    android:id="@+id/backcolorfab"
-                                    android:layout_width="wrap_content"
-                                    android:layout_height="wrap_content"
-                                    android:layout_gravity="center"
-                                    android:background="@drawable/round"
-                                    android:backgroundTint="@color/lwhite"
-                                    android:contentDescription="Alterar plano de fundo"
-                                    android:padding="10dp"
-                                    android:src="@drawable/ic_format_color_fill_white_24dp" />
-
-                            </LinearLayout>
-
-                        </RelativeLayout>
-
-                        <LinearLayout
-                            android:layout_width="match_parent"
+                        <ImageButton
+                            android:id="@+id/backcolorfab"
+                            android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:orientation="vertical">
-
-                            <EditText
-                                android:id="@+id/quoteTextView"
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:background="@color/transparent"
-                                android:hint="@string/quote"
-                                android:importantForAutofill="no"
-                                android:padding="16dp"
-                                android:textSize="@dimen/default_quote_size"
-                                android:textStyle="bold"
-                                android:inputType="textCapSentences"
-                                android:typeface="normal" />
-
-                            <EditText
-                                android:inputType="textPersonName"
-                                android:id="@+id/author_text_view"
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:layout_gravity="start"
-                                android:alpha="0.8"
-                                android:background="@color/transparent"
-                                android:backgroundTint="@color/transparent"
-                                android:hint="@string/author"
-                                android:padding="16dp"
-                                android:textSize="24sp"
-                                android:typeface="normal" />
-                        </LinearLayout>
-
+                            android:layout_gravity="center"
+                            android:background="@drawable/round"
+                            android:backgroundTint="@color/lwhite"
+                            android:contentDescription="Alterar plano de fundo"
+                            android:padding="10dp"
+                            android:src="@drawable/ic_format_color_fill_white_24dp" />
 
                     </LinearLayout>
 
+                </RelativeLayout>
 
-                </com.google.android.material.card.MaterialCardView>
 
-                <com.google.android.material.button.MaterialButton
-                    android:layout_alignParentBottom="true"
-                    android:layout_marginHorizontal="10dp"
-                    android:layout_marginVertical="15dp"
-                    android:id="@+id/save_quote_button"
+                <EditText
+                    android:id="@+id/quoteTextView"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_above="@+id/author_text_view"
+                    android:layout_below="@id/quoteInfo"
+                    android:autoSizeMaxTextSize="@dimen/big_quote_size"
+                    android:autoSizeMinTextSize="@dimen/min_quote_size"
+                    android:autoSizeTextType="uniform"
+                    android:background="@color/transparent"
+                    android:breakStrategy="high_quality"
+                    android:hint="@string/quote"
+                    android:importantForAutofill="no"
+                    android:inputType="textMultiLine"
+                    android:textSize="@dimen/default_quote_size"
+                    android:textStyle="bold"
+                    android:typeface="normal"
+                    tools:text="Change is a powerful thing, I feel it coming to me." />
+
+                <EditText
+                    android:id="@+id/author_text_view"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="10dp"
-                    android:background="@drawable/round"
-                    android:padding="16dp"
-                    android:text="Salvar Frase"
-                    android:textColor="@color/white"
-                    android:textStyle="bold"
-                    app:backgroundTint="@color/colorPrimaryDark" />
-            </LinearLayout>
+                    android:layout_alignParentBottom="true"
+                    android:layout_marginBottom="24dp"
+                    android:autoSizeMaxTextSize="@dimen/big_quote_size"
+                    android:autoSizeMinTextSize="@dimen/min_quote_size"
+                    android:autoSizeTextType="uniform"
+                    android:backgroundTint="@color/transparent"
+                    android:hint="@string/author"
+                    android:importantForAutofill="no"
+                    android:inputType="textPersonName"
+                    android:padding="@dimen/default_padding"
+                    android:textSize="24sp"
+                    android:textStyle="italic"
+                    tools:textColor="@color/white" />
 
-        </ScrollView>
+
+            </RelativeLayout>
+
+
+        </com.google.android.material.card.MaterialCardView>
+
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/save_quote_button"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_marginHorizontal="10dp"
+            android:layout_marginVertical="15dp"
+            android:layout_marginTop="10dp"
+            android:background="@drawable/round"
+            android:padding="16dp"
+            android:text="@string/save_quote_button"
+            android:textColor="@color/white"
+            android:textStyle="bold"
+            app:backgroundTint="@color/colorPrimaryDark" />
+
+        <com.google.android.material.progressindicator.ProgressIndicator
+            android:id="@+id/editloading"
+            android:layout_width="32dp"
+            android:layout_height="32dp"
+            android:layout_alignParentBottom="true"
+            android:layout_centerInParent="true"
+            android:layout_marginHorizontal="10dp"
+            android:layout_marginVertical="15dp"
+            android:elevation="4dp"
+            android:indeterminate="true"
+            android:indeterminateTint="@color/white"
+            android:visibility="gone"
+            app:indicatorColor="@color/colorPrimaryDark"
+            app:indicatorType="circular"
+            app:trackColor="@color/white" />
     </RelativeLayout>
 
 </layout>
