--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,14 +8,13 @@
         android:id="@+id/mainContainer"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:animateLayoutChanges="true"
         android:fitsSystemWindows="true">
 
         <com.google.android.material.appbar.AppBarLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="?android:colorBackground"
-            app:elevation="0dp">
+            app:elevation="3dp">
 
             <com.google.android.material.appbar.CollapsingToolbarLayout
                 app:title=""
@@ -24,23 +23,38 @@
                 android:layout_height="wrap_content"
                 app:layout_scrollFlags="scroll|snap">
 
+
+                <de.hdodenhof.circleimageview.CircleImageView
+                    android:id="@+id/userpic"
+                    android:layout_width="50dp"
+                    android:layout_height="?attr/actionBarSize"
+                    android:layout_marginStart="@dimen/default_padding"
+                    android:stateListAnimator="@animator/list_animator"
+                    android:transitionName="profilepic"
+                    app:civ_circle_background_color="@color/colorPrimaryDark"
+                    app:layout_collapseMode="parallax"
+                    tools:src="@drawable/notfound" />
+
+                <androidx.appcompat.widget.Toolbar
+                    android:id="@+id/toolbar"
+                    android:layout_width="match_parent"
+                    android:layout_height="?attr/actionBarSize"
+                    android:animateLayoutChanges="true"
+                    android:elevation="0dp"
+                    app:layout_collapseMode="parallax" />
+
                 <com.google.android.material.tabs.TabLayout
-                    android:paddingStart="8dp"
-                    android:paddingTop="4dp"
-                    android:paddingEnd="8dp"
+                    android:layout_height="?attr/actionBarSize"
                     android:id="@+id/navigation"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentBottom="true"
+                    app:layout_collapseMode="pin"
                     android:layout_marginTop="?android:actionBarSize"
                     android:animateLayoutChanges="true"
-                    app:tabGravity="start"
-                    app:tabIconTint="?android:textColorPrimary"
-                    app:tabIndicatorColor="@color/transparent"
+                    app:tabIndicatorColor="@color/colorPrimaryDark"
                     app:tabIndicatorFullWidth="false"
-                    app:tabMode="scrollable"
+                    app:tabIconTint="?android:textColorPrimary"
                     app:tabSelectedTextColor="@color/colorPrimary"
-                    app:tabTextAppearance="@style/ToolbarTitle"
+                    app:tabTextAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                     app:tabTextColor="?android:textColorHint">
 
                     <com.google.android.material.tabs.TabItem
@@ -60,24 +74,6 @@
                 </com.google.android.material.tabs.TabLayout>
 
 
-                <androidx.appcompat.widget.Toolbar
-                    android:id="@+id/toolbar"
-                    android:layout_width="match_parent"
-                    android:layout_height="?attr/actionBarSize"
-                    android:animateLayoutChanges="true"
-                    android:elevation="0dp"
-                    app:layout_collapseMode="pin" />
-
-
-                <de.hdodenhof.circleimageview.CircleImageView
-                    android:id="@+id/userpic"
-                    android:layout_width="50dp"
-                    android:layout_height="?attr/actionBarSize"
-                    android:layout_marginStart="@dimen/default_padding"
-                    android:stateListAnimator="@animator/list_animator"
-                    android:transitionName="profilepic"
-                    app:civ_circle_background_color="@color/colorPrimaryDark"
-                    tools:src="@drawable/notfound" />
 
             </com.google.android.material.appbar.CollapsingToolbarLayout>
 
@@ -85,7 +81,6 @@
 
         <androidx.viewpager.widget.ViewPager
             android:padding="@dimen/default_padding"
-            android:layout_marginBottom="?attr/actionBarSize"
             android:id="@+id/pager"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
