--- a/app/src/main/res/layout/newquotepopup.xml
+++ b/app/src/main/res/layout/newquotepopup.xml
@@ -6,187 +6,194 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
-
-    <RelativeLayout
+    <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/colorlibrary"
+        <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_alignParentTop="true"
-            android:orientation="horizontal"
-            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
-            app:spanCount="3"
-            tools:listitem="@layout/color_card" />
+            android:layout_height="wrap_content">
 
-
-        <com.google.android.material.card.MaterialCardView
-            android:layout_below="@id/colorlibrary"
-            android:id="@+id/background"
-            android:layout_width="match_parent"
-            android:layout_height="350dp"
-            android:layout_marginVertical="10dp"
-            android:animateLayoutChanges="true"
-            android:elevation="@dimen/cardview_default_elevation"
-            android:foreground="?attr/selectableItemBackground"
-            android:hapticFeedbackEnabled="true"
-            android:orientation="vertical"
-            android:stateListAnimator="@animator/list_animator"
-            app:cardBackgroundColor="?android:textColorHint"
-            app:cardCornerRadius="15dp"
-            app:cardElevation="0dp">
-
-            <RelativeLayout
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/colorlibrary"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_alignParentTop="true"
+                android:orientation="horizontal"
+                app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
+                app:spanCount="3"
+                tools:listitem="@layout/color_card" />
+
+
+            <com.google.android.material.card.MaterialCardView
+                android:id="@+id/background"
+                android:layout_width="match_parent"
+                android:layout_height="400dp"
+                android:layout_below="@id/colorlibrary"
+                android:layout_marginVertical="10dp"
                 android:animateLayoutChanges="true"
-                android:orientation="vertical">
+                android:elevation="@dimen/cardview_default_elevation"
+                android:foreground="?attr/selectableItemBackground"
+                android:hapticFeedbackEnabled="true"
+                android:orientation="vertical"
+                android:stateListAnimator="@animator/list_animator"
+                app:cardBackgroundColor="?android:textColorHint"
+                app:cardCornerRadius="15dp"
+                app:cardElevation="0dp">
 
                 <RelativeLayout
-                    android:id="@+id/quoteInfo"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_alignParentTop="true"
-                    android:background="@drawable/fade_gradient"
-                    android:orientation="horizontal"
-                    android:padding="8dp">
+                    android:animateLayoutChanges="true"
+                    android:orientation="vertical">
 
-                    <include
-                        android:id="@+id/userTop"
-                        layout="@layout/user_quote_card_view"
+                    <RelativeLayout
+                        android:id="@+id/quoteInfo"
                         android:layout_width="match_parent"
-                        android:layout_height="?attr/actionBarSize"
-                        android:layout_centerInParent="true"
-                        android:layout_toStartOf="@id/quoteEditButtons" />
-
-                    <LinearLayout
-                        android:id="@+id/quoteEditButtons"
-                        android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_alignParentEnd="true"
-                        android:layout_centerInParent="true"
-                        android:layout_gravity="center"
-                        android:layout_marginHorizontal="4dp"
-                        android:gravity="center"
-                        android:orientation="horizontal">
+                        android:layout_alignParentTop="true"
+                        android:background="@drawable/fade_gradient"
+                        android:orientation="horizontal"
+                        android:padding="8dp">
 
-                        <ImageButton
-                            android:id="@+id/textcolorfab"
+                        <include
+                            android:id="@+id/userTop"
+                            layout="@layout/user_quote_card_view"
+                            android:layout_width="match_parent"
+                            android:layout_height="?attr/actionBarSize"
+                            android:layout_centerInParent="true"
+                            android:layout_toStartOf="@id/quoteEditButtons" />
+
+                        <LinearLayout
+                            android:id="@+id/quoteEditButtons"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
+                            android:layout_alignParentEnd="true"
+                            android:layout_centerInParent="true"
                             android:layout_gravity="center"
-                            android:background="@drawable/round"
-                            android:backgroundTint="@color/lwhite"
-                            android:contentDescription="Alterar cor do texto"
-                            android:padding="10dp"
-                            android:src="@drawable/ic_format_color_text_black_24dp" />
+                            android:layout_marginHorizontal="4dp"
+                            android:gravity="center"
+                            android:orientation="horizontal">
 
-                        <TextView
-                            android:id="@+id/fontSelector"
-                            android:layout_width="wrap_content"
+                            <ImageButton
+                                android:id="@+id/textcolorfab"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_gravity="center"
+                                android:background="@drawable/round"
+                                android:backgroundTint="@color/lwhite"
+                                android:contentDescription="Alterar cor do texto"
+                                android:padding="10dp"
+                                android:src="@drawable/ic_format_color_text_black_24dp" />
+
+                            <TextView
+                                android:id="@+id/fontSelector"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_marginStart="5dp"
+                                android:layout_marginEnd="5dp"
+                                android:background="@drawable/round"
+                                android:backgroundTint="@color/lwhite"
+                                android:contentDescription="Alterar fonte"
+                                android:padding="8dp"
+                                android:paddingStart="16dp"
+                                android:paddingEnd="16dp"
+                                android:text="F"
+                                android:textSize="24sp" />
+
+                            <ImageButton
+                                android:id="@+id/backcolorfab"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_gravity="center"
+                                android:background="@drawable/round"
+                                android:backgroundTint="@color/lwhite"
+                                android:contentDescription="Alterar plano de fundo"
+                                android:padding="10dp"
+                                android:src="@drawable/ic_format_color_fill_white_24dp" />
+
+                        </LinearLayout>
+
+                    </RelativeLayout>
+
+
+                    <EditText
+                        android:id="@+id/quoteTextView"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_above="@+id/author_text_view"
+                        android:layout_below="@id/quoteInfo"
+                        android:autoSizeMaxTextSize="@dimen/big_quote_size"
+                        android:autoSizeMinTextSize="@dimen/min_quote_size"
+                        android:autoSizeTextType="uniform"
+                        android:background="@color/transparent"
+                        android:breakStrategy="high_quality"
+                        android:hint="@string/quote"
+                        android:importantForAutofill="no"
+                        android:inputType="textMultiLine"
+                        android:textSize="@dimen/default_quote_size"
+                        android:textStyle="bold"
+                        android:typeface="normal"
+                        tools:text="Change is a powerful thing, I feel it coming to me." />
+
+                    <EditText
+                        android:id="@+id/author_text_view"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_above="@id/saveLayout"
+                        android:autoSizeMaxTextSize="@dimen/big_quote_size"
+                        android:autoSizeMinTextSize="@dimen/min_quote_size"
+                        android:autoSizeTextType="uniform"
+                        android:backgroundTint="@color/transparent"
+                        android:hint="@string/author"
+                        android:importantForAutofill="no"
+                        android:inputType="textPersonName"
+                        android:padding="@dimen/default_padding"
+                        android:textSize="24sp"
+                        android:textStyle="italic"
+                        tools:textColor="@color/white" />
+
+
+                    <RelativeLayout
+                        android:id="@+id/saveLayout"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_alignParentBottom="true">
+
+                        <com.google.android.material.button.MaterialButton
+                            android:id="@+id/save_quote_button"
+                            android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:layout_marginStart="5dp"
-                            android:layout_marginEnd="5dp"
+                            android:layout_margin="@dimen/default_padding"
                             android:background="@drawable/round"
-                            android:backgroundTint="@color/lwhite"
-                            android:contentDescription="Alterar fonte"
-                            android:padding="8dp"
-                            android:paddingStart="16dp"
-                            android:paddingEnd="16dp"
-                            android:text="F"
-                            android:textSize="24sp" />
+                            android:padding="16dp"
+                            android:text="@string/save_quote_button"
+                            android:textColor="@color/white"
+                            android:textStyle="bold"
+                            app:backgroundTint="@color/colorPrimaryDark" />
 
-                        <ImageButton
-                            android:id="@+id/backcolorfab"
-                            android:layout_width="wrap_content"
+                        <com.google.android.material.progressindicator.ProgressIndicator
+                            android:id="@+id/editloading"
+                            android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:layout_gravity="center"
-                            android:background="@drawable/round"
-                            android:backgroundTint="@color/lwhite"
-                            android:contentDescription="Alterar plano de fundo"
-                            android:padding="10dp"
-                            android:src="@drawable/ic_format_color_fill_white_24dp" />
+                            android:layout_centerInParent="true"
+                            android:elevation="4dp"
+                            android:indeterminate="true"
+                            android:indeterminateTint="@color/white"
+                            android:visibility="gone"
+                            app:indicatorColor="@color/colorPrimaryDark"
+                            app:indicatorType="circular"
+                            app:trackColor="@color/white"
+                            tools:visibility="visible" />
 
-                    </LinearLayout>
-
+                    </RelativeLayout>
                 </RelativeLayout>
 
 
-                <EditText
-                    android:id="@+id/quoteTextView"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_above="@+id/author_text_view"
-                    android:layout_below="@id/quoteInfo"
-                    android:autoSizeMaxTextSize="@dimen/big_quote_size"
-                    android:autoSizeMinTextSize="@dimen/min_quote_size"
-                    android:autoSizeTextType="uniform"
-                    android:background="@color/transparent"
-                    android:breakStrategy="high_quality"
-                    android:hint="@string/quote"
-                    android:importantForAutofill="no"
-                    android:inputType="textMultiLine"
-                    android:textSize="@dimen/default_quote_size"
-                    android:textStyle="bold"
-                    android:typeface="normal"
-                    tools:text="Change is a powerful thing, I feel it coming to me." />
-
-                <EditText
-                    android:id="@+id/author_text_view"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentBottom="true"
-                    android:layout_marginBottom="24dp"
-                    android:autoSizeMaxTextSize="@dimen/big_quote_size"
-                    android:autoSizeMinTextSize="@dimen/min_quote_size"
-                    android:autoSizeTextType="uniform"
-                    android:backgroundTint="@color/transparent"
-                    android:hint="@string/author"
-                    android:importantForAutofill="no"
-                    android:inputType="textPersonName"
-                    android:padding="@dimen/default_padding"
-                    android:textSize="24sp"
-                    android:textStyle="italic"
-                    tools:textColor="@color/white" />
+            </com.google.android.material.card.MaterialCardView>
 
 
-            </RelativeLayout>
-
-
-        </com.google.android.material.card.MaterialCardView>
-
-        <com.google.android.material.button.MaterialButton
-            android:id="@+id/save_quote_button"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
-            android:layout_marginHorizontal="10dp"
-            android:layout_marginVertical="15dp"
-            android:layout_marginTop="10dp"
-            android:background="@drawable/round"
-            android:padding="16dp"
-            android:text="@string/save_quote_button"
-            android:textColor="@color/white"
-            android:textStyle="bold"
-            app:backgroundTint="@color/colorPrimaryDark" />
-
-        <com.google.android.material.progressindicator.ProgressIndicator
-            android:id="@+id/editloading"
-            android:layout_width="32dp"
-            android:layout_height="32dp"
-            android:layout_alignParentBottom="true"
-            android:layout_centerInParent="true"
-            android:layout_marginHorizontal="10dp"
-            android:layout_marginVertical="15dp"
-            android:elevation="4dp"
-            android:indeterminate="true"
-            android:indeterminateTint="@color/white"
-            android:visibility="gone"
-            app:indicatorColor="@color/colorPrimaryDark"
-            app:indicatorType="circular"
-            app:trackColor="@color/white" />
-    </RelativeLayout>
+        </RelativeLayout>
+    </ScrollView>
 
 </layout>
