--- a/app/src/main/res/layout/profile_top_view.xml
+++ b/app/src/main/res/layout/profile_top_view.xml
@@ -20,27 +20,58 @@
         android:orientation="vertical"
         android:padding="@dimen/default_padding">
 
-        <de.hdodenhof.circleimageview.CircleImageView
-            android:id="@+id/profilepic"
-            android:layout_width="150dp"
-            android:layout_height="150dp"
-            android:layout_gravity="center"
-            android:contentDescription="Profile picture"
-            app:civ_circle_background_color="@color/colorPrimaryDark"
-            android:fitsSystemWindows="true"
-            android:tooltipText="Alterar foto de perfil"
-            android:stateListAnimator="@animator/list_animator"
-            android:transitionName="profilepic"
-            tools:src="@drawable/notfound" />
 
-        <TextView
-            style="@style/TextAppearance.MaterialComponents.Headline5"
+        <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@{userData.name}"
-            android:textAlignment="center"
-            android:textStyle="bold"
-            tools:text="Caio Alves Ferreira" />
+            android:animateLayoutChanges="true">
+
+            <com.facebook.shimmer.ShimmerFrameLayout
+                android:id="@+id/topShimmer"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_centerInParent="true">
+
+                <LinearLayout
+                    android:id="@+id/userInfo"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="center"
+                    android:orientation="vertical">
+
+                    <de.hdodenhof.circleimageview.CircleImageView
+                        android:id="@+id/profilepic"
+                        android:layout_width="150dp"
+                        android:layout_height="150dp"
+                        android:layout_gravity="center"
+                        android:contentDescription="Profile picture"
+                        android:fitsSystemWindows="true"
+                        android:stateListAnimator="@animator/list_animator"
+                        android:tooltipText="Alterar foto de perfil"
+                        android:transitionName="profilepic"
+                        app:civ_circle_background_color="@color/colorPrimaryDark"
+                        tools:src="@drawable/notfound" />
+
+                    <EditText
+                        android:id="@+id/username"
+                        style="@style/TextAppearance.MaterialComponents.Headline5"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="10dp"
+                        android:background="@color/transparent"
+                        android:imeOptions="actionDone|actionGo"
+                        android:maxLength="20"
+                        android:singleLine="true"
+                        android:text="@{userData.name}"
+                        android:textAlignment="center"
+                        android:textStyle="bold"
+                        tools:text="Caio Alves Ferreira" />
+
+                </LinearLayout>
+
+            </com.facebook.shimmer.ShimmerFrameLayout>
+        </RelativeLayout>
+
 
         <RelativeLayout
             android:layout_width="match_parent"
