--- a/app/src/main/res/layout/quote_advertise_layout.xml
+++ b/app/src/main/res/layout/quote_advertise_layout.xml
@@ -10,113 +10,158 @@
             type="com.google.android.gms.ads.formats.UnifiedNativeAd" />
     </data>
 
-    <com.google.android.gms.ads.formats.UnifiedNativeAdView
+    <com.google.android.material.card.MaterialCardView
+        android:id="@+id/adCard"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="10dp"
+        android:visibility="gone"
+        app:cardBackgroundColor="?android:textColorPrimary"
+        app:cardCornerRadius="@dimen/default_radius"
+        app:cardElevation="0dp"
+        tools:visibility="visible">
 
-        <com.google.android.material.card.MaterialCardView
-            android:id="@+id/adCard"
+        <com.google.android.gms.ads.formats.UnifiedNativeAdView
+            android:id="@+id/adView"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="10dp"
-            android:stateListAnimator="@animator/list_animator"
-            android:visibility="gone"
-            app:cardBackgroundColor="@color/colorAccent"
-            app:cardCornerRadius="@dimen/default_radius"
-            tools:visibility="visible">
+            android:layout_height="wrap_content">
 
-
-            <RelativeLayout
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="350dp"
+                android:layout_height="wrap_content"
+                android:padding="@dimen/default_padding"
                 android:orientation="vertical">
 
-                <ImageView
-                    android:id="@+id/adAppImage"
+
+                <RelativeLayout
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:scaleType="centerCrop"
-                    android:src="@drawable/ic_image" />
+                    android:layout_height="wrap_content">
 
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentStart="true"
-                    android:layout_margin="@dimen/default_padding"
-                    android:background="@drawable/round_low"
-                    android:backgroundTint="@color/material_green400"
-                    android:gravity="center"
-                    android:padding="4dp"
-                    android:text="Anúncio"
-                    android:textColor="@color/white"
-                    android:textStyle="bold" />
-
-                <ImageButton
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentEnd="true"
-                    android:layout_margin="@dimen/default_padding"
-                    android:background="@color/transparent"
-                    android:src="@drawable/ic_adchoices"
-                    android:stateListAnimator="@animator/list_animator" />
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentBottom="true"
-                    android:background="@color/colorPrimaryDark"
-                    android:orientation="horizontal"
-                    android:padding="4dp">
-
-                    <ImageView
-                        android:id="@+id/adAppIcon"
-                        android:layout_width="50dp"
-                        android:layout_height="50dp"
-                        android:layout_gravity="center"
-                        android:background="@drawable/round"
-                        android:backgroundTint="@color/lwhite"
-                        android:scaleType="fitCenter"
-                        android:src="@drawable/ic_image" />
 
                     <LinearLayout
-                        android:layout_width="wrap_content"
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_margin="10dp"
-                        android:orientation="vertical">
+                        android:layout_marginTop="@dimen/default_margin"
+                        android:orientation="horizontal">
 
-                        <TextView
+                        <androidx.cardview.widget.CardView
+                            android:id="@+id/adIconCard"
+                            android:layout_width="80dp"
+                            android:layout_height="80dp"
+                            android:layout_gravity="center"
+                            app:cardCornerRadius="@dimen/default_radius">
+
+                            <ImageView
+                                android:id="@+id/adAppIcon"
+                                android:layout_width="match_parent"
+                                android:layout_height="match_parent"
+                                android:importantForAccessibility="no"
+                                android:scaleType="centerCrop"
+                                android:src="@drawable/ic_image" />
+                        </androidx.cardview.widget.CardView>
+
+                        <LinearLayout
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:text="@{advertise.headline}"
-                            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
-                            android:textStyle="bold"
-                            tools:text="Ad Title" />
+                            android:layout_marginStart="10dp"
+                            android:orientation="vertical">
 
-                        <TextView
-                            style="@style/TextAppearance.MaterialComponents.Subtitle1"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:text="@{advertise.advertiser}"
-                            tools:text="Advertiser" />
+                            <TextView
+                                android:id="@+id/adHeadline"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:text="@{advertise.headline}"
+                                android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
+                                android:textColor="?android:colorBackground"
+                                android:textStyle="bold"
+                                tools:text="Ad Title" />
 
-                        <RatingBar
-                            android:id="@+id/appRating"
-                            style="@style/Widget.AppCompat.RatingBar.Small"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:progressTint="@color/material_yellow600"
-                            android:rating="@{advertise.starRating.intValue()}"
-                            android:stepSize="1" />
+                            <TextView
+                                android:id="@+id/adAdvertiser"
+                                style="@style/TextAppearance.MaterialComponents.Caption"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:text="@{advertise.advertiser}"
+                                android:textColor="?android:colorBackground"
+                                tools:text="Advertiser" />
+
+                            <com.google.android.gms.ads.formats.AdChoicesView
+                                android:id="@+id/adChoices"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content">
+
+                                <TextView
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:alpha="0.5"
+                                    android:drawablePadding="8dp"
+                                    android:fontFamily="@font/lato_light"
+                                    android:text="Patrocinado"
+                                    android:textColor="?android:colorBackground"
+                                    android:textSize="10sp"
+                                    app:drawableEndCompat="@drawable/ic_adchoices" />
+
+                            </com.google.android.gms.ads.formats.AdChoicesView>
+
+
+                            <RatingBar
+                                android:id="@+id/appRating"
+                                style="@style/Widget.AppCompat.RatingBar.Small"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:progressTint="@color/material_yellow600"
+                                android:rating="@{advertise.starRating.intValue()}"
+                                android:stepSize="1" />
+                        </LinearLayout>
+
+
                     </LinearLayout>
 
 
-                </LinearLayout>
+                </RelativeLayout>
 
+                <androidx.cardview.widget.CardView
+                    android:layout_width="match_parent"
+                    android:layout_height="200dp"
+                    android:layout_marginTop="@dimen/default_margin"
+                    app:cardCornerRadius="@dimen/default_radius">
 
-            </RelativeLayout>
-        </com.google.android.material.card.MaterialCardView>
+                    <ImageView
+                        android:id="@+id/adAppImage"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:contentDescription="Imagem do anunciante"
+                        android:scaleType="centerCrop"
+                        android:src="@drawable/ic_image" />
+                </androidx.cardview.widget.CardView>
 
-    </com.google.android.gms.ads.formats.UnifiedNativeAdView>
+                <TextView
+                    android:id="@+id/adBody"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/default_margin"
+                    android:padding="4dp"
+                    android:text="@{advertise.body}"
+                    android:textColor="?android:colorBackground"
+                    tools:text="Ad body here" />
+
+                <com.google.android.material.button.MaterialButton
+                    android:id="@+id/adActionButton"
+                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_marginTop="@dimen/default_margin"
+                    android:stateListAnimator="@animator/list_animator"
+                    android:text="Acessar"
+                    android:textColor="?android:colorBackground"
+                    app:cornerRadius="@dimen/default_radius"
+                    app:strokeColor="?android:colorBackground"
+                    app:strokeWidth="2dp" />
+
+            </LinearLayout>
+        </com.google.android.gms.ads.formats.UnifiedNativeAdView>
+    </com.google.android.material.card.MaterialCardView>
 
 
 </layout>
