--- a/app/src/main/res/layout/quote_advertise_layout.xml
+++ b/app/src/main/res/layout/quote_advertise_layout.xml
@@ -11,156 +11,131 @@
     </data>
 
     <com.google.android.material.card.MaterialCardView
+        android:layout_height="400dp"
+        android:layout_marginVertical="10dp"
         android:id="@+id/adCard"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="10dp"
+        android:animateLayoutChanges="true"
+        android:elevation="@dimen/cardview_default_elevation"
+        android:foreground="?attr/selectableItemBackground"
+        android:hapticFeedbackEnabled="true"
+        android:orientation="vertical"
+        android:stateListAnimator="@animator/list_animator"
         android:visibility="gone"
-        app:cardBackgroundColor="?android:textColorPrimary"
-        app:cardCornerRadius="@dimen/default_radius"
+        app:cardBackgroundColor="@color/lblack"
+        app:cardCornerRadius="15dp"
         app:cardElevation="0dp"
         tools:visibility="visible">
 
         <com.google.android.gms.ads.formats.UnifiedNativeAdView
             android:id="@+id/adView"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="match_parent">
 
-            <LinearLayout
+            <RelativeLayout
+                android:id="@+id/quoteMainView"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:padding="@dimen/default_padding"
+                android:layout_height="match_parent"
+                android:animateLayoutChanges="true"
                 android:orientation="vertical">
 
+                <com.google.android.gms.ads.formats.MediaView
+                    android:id="@+id/adAppMedia"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:background="@drawable/advertise_gradient"
+                    android:scaleType="centerCrop" />
 
                 <RelativeLayout
+                    android:id="@+id/quoteInfo"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentTop="true"
+                    android:background="@drawable/fade_gradient"
+                    android:orientation="vertical"
+                    android:padding="@dimen/default_padding">
 
-
-                    <LinearLayout
-                        android:layout_width="match_parent"
+                    <com.google.android.gms.ads.formats.AdChoicesView
+                        android:id="@+id/adChoices"
+                        android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginTop="@dimen/default_margin"
-                        android:orientation="horizontal">
+                        android:layout_alignParentEnd="true"
+                        android:layout_centerInParent="true">
 
-                        <androidx.cardview.widget.CardView
-                            android:id="@+id/adIconCard"
-                            android:layout_width="80dp"
-                            android:layout_height="80dp"
-                            android:layout_gravity="center"
-                            app:cardCornerRadius="@dimen/default_radius">
-
-                            <ImageView
-                                android:id="@+id/adAppIcon"
-                                android:layout_width="match_parent"
-                                android:layout_height="match_parent"
-                                android:importantForAccessibility="no"
-                                android:scaleType="centerCrop"
-                                android:src="@drawable/ic_image" />
-                        </androidx.cardview.widget.CardView>
-
-                        <LinearLayout
-                            android:layout_width="match_parent"
+                        <TextView
+                            android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:layout_marginStart="10dp"
-                            android:orientation="vertical">
-
-                            <TextView
-                                android:id="@+id/adHeadline"
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:text="@{advertise.headline}"
-                                android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
-                                android:textColor="?android:colorBackground"
-                                android:textStyle="bold"
-                                tools:text="Ad Title" />
-
-                            <TextView
-                                android:id="@+id/adAdvertiser"
-                                style="@style/TextAppearance.MaterialComponents.Caption"
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:text="@{advertise.advertiser}"
-                                android:textColor="?android:colorBackground"
-                                tools:text="Advertiser" />
-
-                            <com.google.android.gms.ads.formats.AdChoicesView
-                                android:id="@+id/adChoices"
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content">
-
-                                <TextView
-                                    android:layout_width="wrap_content"
-                                    android:layout_height="wrap_content"
-                                    android:alpha="0.5"
-                                    android:drawablePadding="8dp"
-                                    android:fontFamily="@font/lato_light"
-                                    android:text="Patrocinado"
-                                    android:textColor="?android:colorBackground"
-                                    android:textSize="10sp"
-                                    app:drawableEndCompat="@drawable/ic_adchoices" />
-
-                            </com.google.android.gms.ads.formats.AdChoicesView>
+                            android:background="@drawable/round_low"
+                            android:backgroundTint="@color/lblack"
+                            android:padding="8dp"
+                            android:text="Conteúdo patrocinado"
+                            android:textColor="@color/white"
+                            android:textSize="12sp"
+                            android:textStyle="bold" />
+                    </com.google.android.gms.ads.formats.AdChoicesView>
 
 
-                            <RatingBar
-                                android:id="@+id/appRating"
-                                style="@style/Widget.AppCompat.RatingBar.Small"
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:progressTint="@color/material_yellow600"
-                                android:rating="@{advertise.starRating.intValue()}"
-                                android:stepSize="1" />
-                        </LinearLayout>
-
-
-                    </LinearLayout>
+                    <include
+                        android:id="@+id/userTop"
+                        layout="@layout/user_quote_card_view"
+                        android:layout_width="match_parent"
+                        android:layout_height="?attr/actionBarSize"
+                        android:layout_centerInParent="true"
+                        android:layout_toStartOf="@id/adChoices" />
 
 
                 </RelativeLayout>
 
-                <androidx.cardview.widget.CardView
-                    android:layout_width="match_parent"
-                    android:layout_height="200dp"
-                    android:layout_marginTop="@dimen/default_margin"
-                    app:cardCornerRadius="@dimen/default_radius">
 
-                    <ImageView
-                        android:id="@+id/adAppImage"
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:contentDescription="Imagem do anunciante"
-                        android:scaleType="centerCrop"
-                        android:src="@drawable/ic_image" />
-                </androidx.cardview.widget.CardView>
+                <TextView
+                    android:id="@+id/adHeadline"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentBottom="true"
+                    android:paddingStart="8dp"
+                    android:paddingEnd="8dp"
+                    android:paddingBottom="8dp"
+                    android:text="@{advertise.body}"
+                    android:textColor="@color/white"
+                    android:textSize="@dimen/min_quote_size"
+                    android:textStyle="bold"
+                    android:typeface="normal"
+                    tools:text="Experience the best app for mental healthy, download today" />
 
                 <TextView
                     android:id="@+id/adBody"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/default_margin"
-                    android:padding="4dp"
-                    android:text="@{advertise.body}"
-                    android:textColor="?android:colorBackground"
-                    tools:text="Ad body here" />
+                    android:layout_above="@id/appRating"
+                    android:layout_alignParentStart="true"
+                    android:layout_centerInParent="true"
+                    android:backgroundTint="@color/transparent"
+                    android:paddingStart="8dp"
+                    android:paddingEnd="8dp"
+                    android:text="@{advertise.headline}"
+                    android:textColor="@color/white"
+                    android:textSize="12sp"
+                    tools:text="Ilustris" />
 
-                <com.google.android.material.button.MaterialButton
-                    android:id="@+id/adActionButton"
-                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
-                    android:layout_width="match_parent"
+                <RatingBar
+                    android:id="@+id/appRating"
+                    style="@style/Widget.AppCompat.RatingBar.Small"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:layout_marginTop="@dimen/default_margin"
-                    android:stateListAnimator="@animator/list_animator"
-                    android:text="Acessar"
-                    android:textColor="?android:colorBackground"
-                    app:cornerRadius="@dimen/default_radius"
-                    app:strokeColor="?android:colorBackground"
-                    app:strokeWidth="2dp" />
+                    android:layout_above="@id/adHeadline"
+                    android:paddingStart="8dp"
+                    android:paddingEnd="8dp"
+                    android:progressTint="@color/material_yellow600"
+                    android:rating="@{advertise.starRating.intValue()}"
+                    android:stepSize="1"
+                    tools:rating="5" />
 
-            </LinearLayout>
+
+            </RelativeLayout>
+
         </com.google.android.gms.ads.formats.UnifiedNativeAdView>
+
+
     </com.google.android.material.card.MaterialCardView>
 
 
