--- a/app/src/main/res/layout/profile_top_view.xml
+++ b/app/src/main/res/layout/profile_top_view.xml
@@ -62,6 +62,9 @@
                         android:imeOptions="actionDone|actionGo"
                         android:maxLength="20"
                         android:singleLine="true"
+                        android:hint="@{userData.name}"
+                        android:importantForAutofill="no"
+                        android:inputType="textPersonName"
                         android:text="@{userData.name}"
                         android:textAlignment="center"
                         android:textStyle="bold"
