ui changes and optimizations on add icons, version ready to production!

--- a/app/src/main/res/layout/activity_add_icons.xml
+++ b/app/src/main/res/layout/activity_add_icons.xml
@@ -30,6 +30,13 @@
                 app:spanCount="2"
                 tools:listitem="@layout/pics_layout" />
 
+            <com.google.android.material.progressindicator.ProgressIndicator
+                android:id="@+id/loading"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:indeterminate="true"
+                app:growMode="bidirectional" />
+
             <com.google.android.material.button.MaterialButton
                 android:id="@+id/saveIcons"
                 android:layout_width="match_parent"
